Fix color contrast (#e64946 → #e22d30)
WCAG 2 AA contrast ratio compliance

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,7 +134,7 @@ textarea {
 
 .btn:hover {
 	color: #fff;
-	background: #e64946;
+	background: #e22d30;
 }
 
 /* Animation */
@@ -193,7 +193,7 @@ a {
 }
 
 a:hover {
-	color: #e64946;
+	color: #e22d30;
 }
 
 hr {
@@ -299,7 +299,7 @@ blockquote {
 	margin: 0 0 20px;
 	margin: 0 0 1.25rem;
 	line-height: 1.6;
-	border-left: 5px solid #e64946;
+	border-left: 5px solid #e22d30;
 }
 
 blockquote p:last-child {
@@ -405,14 +405,14 @@ select {
 	font-size: .875rem;
 	font-weight: 700;
 	line-height: 1;
-	color: #e64946;
+	color: #e22d30;
 	border-top: 1px solid #ebebeb;
 }
 
 .divider {
 	height: 5px;
 	margin: 0;
-	background: #e64946;
+	background: #e22d30;
 	border: 0;
 }
 
@@ -449,7 +449,7 @@ select {
 }
 
 :focus > .menu__btn-title {
-	box-shadow: inset 0 0 1px 3px #e64946;
+	box-shadow: inset 0 0 1px 3px #e22d30;
 }
 
 button:not(:-moz-focusring):focus > .menu__btn-title {
@@ -462,7 +462,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 }
 
 .js .menu__btn--active {
-	color: #e64946;
+	color: #e22d30;
 }
 
 .menu__list {
@@ -471,7 +471,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 }
 
 .menu__item:hover {
-	background: #e64946;
+	background: #e22d30;
 }
 
 .menu__item:first-child {
@@ -479,7 +479,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 }
 
 .menu__item--active {
-	background: #e64946;
+	background: #e22d30;
 }
 
 .menu__link {
@@ -520,7 +520,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 
 @media screen and (min-width: 767px) {
 	.menu {
-		border-bottom: 5px solid #e64946;
+		border-bottom: 5px solid #e22d30;
 	}
 
 	.menu__btn {
@@ -574,7 +574,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 }
 
 .meta a:hover {
-	color: #e64946;
+	color: #e22d30;
 }
 
 .meta__item {
@@ -630,12 +630,12 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 .content a,
 .warning a {
 	font-weight: 700;
-	color: #e64946;
+	color: #e22d30;
 }
 
 .content a:hover,
 .warning a:hover {
-	color: #e64946;
+	color: #e22d30;
 	text-decoration: underline;
 }
 
@@ -709,7 +709,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 }
 
 .tags__item:hover {
-	background: #e64946;
+	background: #e22d30;
 }
 
 .tags__link,
@@ -724,7 +724,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 	height: 32px;
 	padding: 8px;
 	margin-right: 6px;
-	background: #e64946;
+	background: #e22d30;
 	fill: #fff;
 }
 
@@ -782,7 +782,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 .toc__menu a {
 	display: block;
 	padding: 5px 10px;
-	color: #e64946;
+	color: #e22d30;
 	border-bottom: 1px solid #ebebeb;
 }
 
@@ -865,7 +865,7 @@ button:not(:-moz-focusring):focus > .menu__btn-title {
 .pagination__item:hover,
 .pagination__item--current {
 	color: #fff;
-	background: #e64946;
+	background: #e22d30;
 }
 
 /* Post Navigation */
@@ -987,7 +987,7 @@ input[type=reset] {
 
 input[type=submit]:hover,
 input[type=reset]:hover {
-	background: #e64946;
+	background: #e22d30;
 }
 
 textarea {
@@ -1016,7 +1016,7 @@ textarea {
 	font-size: 16px;
 	font-size: 1rem;
 	text-transform: uppercase;
-	border-bottom: 3px solid #e64946;
+	border-bottom: 3px solid #e22d30;
 }
 
 .widget__item {
@@ -1094,7 +1094,7 @@ textarea {
 
 .widget-languages__link:hover .widget-languages__link-btn {
 	color: #fff;
-	background: #e64946;
+	background: #e22d30;
 }
 
 .widget-languages__link-btn {
